<resources>
    <string name="app_name">팀구</string>
    <string name="label_confirm_button">확인</string>

    <!-- bottom navigation -->
    <string name="home">홈</string>
    <string name="lecture">내 강의</string>
    <string name="side">사이드</string>
    <string name="mypage">MY</string>

    <!-- AppBar -->
    <string name="navigation_icon">navigation_icon</string>
    <string name="navigation_action">navigation_action</string>

    <!-- Onboarding -->
    <string name="label_login">나만의 팀을 만나는 가장 현명한 방법</string>
    <string name="label_login_email_hint">학교 이메일을 입력해주세요.</string>
    <string name="label_login_password_hint">비밀번호를 입력해주세요.</string>
    <string name="label_email">학교 이메일</string>
    <string name="label_password">비밀번호</string>
    <string name="label_login_button">로그인</string>
    <string name="label_signup_button">회원가입</string>
    <string name="label_login_top">나만의 팀을 구하는\n가장 현명한 방법</string>

    <!-- Home screen -->
    <string name="label_write_recruitment_button">모집글 작성하기</string>
    <string name="label_process_teample">내가 진행중인 팀플</string>
    <string name="label_recommend_teample">나를 위한 추천 사이드 팀플</string>

    <!-- Alarm -->
    <string name="alarm">알림</string>
    <string name="label_select_all">전체선택</string>
    <string name="label_unselect">선택해제</string>
    <string name="label_delete_button">삭제하기</string>
    <string name="label_alarm_empty">아직 알림이 없어요!</string>
    <string name="label_alarm_empty_detail">마음에 드는 모집글에 댓글을 달아보세요.\n나와 딱 맞는 팀원을 만나게 될지도 몰라요.</string>

    <!-- Bookmark -->
    <string name="bookmark">북마크</string>
    <string name="label_bookmark_empty">북마크한 글이 없어요!</string>
    <string name="label_bookmark_empty_detail">하고싶은 프로젝트가 있다면, 모집글을 찾아보세요 :)</string>

    <!-- Signup & Login -->
    <string name="label_school_select">학교 선택</string>
    <string name="label_school_email">학교 이메일</string>
    <string name="label_signup_school_name_hint">학교 이름을 입력해주세요.</string>
    <string name="label_signup_school_email_hint">학교 이메일을 입력해주세요.</string>
    <string name="label_agree">label_agree</string>
    <string name="label_description_agree">개인정보 수집 및 이용에 동의해요.</string>
    <string name="label_certification">인증 번호</string>
    <string name="description_label_erase">label_erase</string>
    <string name="description_label_check">label_check</string>
    <string name="label_password_hint">영문 대문자, 소문자, 숫자 포함 8~20자</string>
    <string name="label_nickname_hint">닉네임 입력해주세요.</string>
    <string name="label_nickname">닉네임</string>

    <!-- My page -->
    <string name="my_page">마이페이지</string>
    <string name="label_level_1">Lv.1</string>
    <string name="label_level_2">Lv.2</string>
    <string name="label_level_3">Lv.3</string>
    <string name="label_level_up">잘하고 있어요! 레벨업까지 달려봐요</string>
    <string name="my_teample">내 팀플</string>
    <string name="my_wrote">내가 쓴 글</string>
    <string name="notification_settings">알림설정</string>
    <string name="terms_of_service">이용약관</string>
    <string name="logout">로그아웃</string>
    <string name="account_withdrawal">계정탈퇴</string>
    <string name="service_center">고객센터</string>

    <!-- My profile -->
    <string name="profile">프로필</string>
    <string name="label_profile_edit_button">수정</string>
    <string name="label_team_again">재팀원 희망률</string>
    <string name="label_finish_project">완주 프로젝트</string>
    <string name="label_profile_detail">세부 정보</string>
    <string name="label_interest">관심 분야</string>
    <string name="label_appeal">님의 어필점은?</string>
    <string name="label_rank">다른 팀원들은 이렇게 생각해요!</string>
    <string name="label_all_rank_button">모두보기</string>

    <!-- Edit profile -->
    <string name="edit_profile">프로필 수정</string>
    <string name="label_edit_profile_button">완료</string>
    <string name="edit_nickname">닉네임 수정</string>
    <string name="label_nickname_settings">로 할래요.</string>
    <string name="label_my_title">나를 한 문장으로 소개해주세요.</string>
    <string name="description_my_title_1">나는</string>
    <string name="description_my_title_2">입니다.</string>
    <string name="label_select_interest">관심분야를 최대 3개 선택해주세요.</string>
    <string name="description_select_interest">선택하신 키워드 바탕으로 모집글을 추천해드려요!</string>
    <string name="label_edit_appeal">어필하고 싶은 점을 자유롭게 적어주세요.</string>
    <string name="description_edit_appeal">부전공, 자격증, 프로젝트 경험, 포트폴리오등\n어필하고 싶은 점을 자유롭게 적어주세요.</string>
    <string name="edit_appeal">소개글 입력</string>
    <string name="label_edit_appeal_button">저장</string>

    <!-- Application status -->
    <string name="application_status">지원현황</string>
    <string name="label_chip_all">전체</string>
    <string name="label_chip_apply">지원중</string>
    <string name="label_chip_accept">수락</string>
    <string name="label_chip_end_recruitment">모집종료</string>
    <string name="label_application_status_empty">지원한 프로젝트가 없어요.</string>
    <string name="label_application_status_empty_detail">하고싶은 프로젝트가 있다면,\n망설이지 말고 지금 바로 지원해보세요!</string>

    <!-- My wrote -->
    <string name="label_chip_recruitment">모집중</string>
    <string name="label_chip_complete_recruitment">모집완료</string>
    <string name="label_chip_fail_recruitment">모집실패</string>
    <string name="label_pull_up_button">끌어올리기</string>
    <string name="label_complete_recruitment_button">모집완료</string>
    <string name="label_again_recruitment_button">재모집하기</string>
    <string name="label_recruitment_wrote_empty">작성한 모집글이 없어요.</string>
    <string name="label_recruitment_wrote_empty_detail">하고싶은 프로젝트로 직접 팀원을 모집해보세요 :)</string>
    <string name="label_comment_wrote_empty">작성한 댓글이 없어요!</string>
    <string name="label_comment_wrote_empty_detail">관심가는 프로젝트에 댓글을 남겨보세요 :)</string>
    <string name="label_delete_comment">삭제</string>
    <string name="label_delete_cancel_button">취소</string>

    <!-- My teample -->
    <string name="label_write_review_button">팀원 후기쓰기</string>
    <string name="label_progress_teample_empty">진행 중인 팀플이 없어요.</string>
    <string name="label_progress_teample_empty_detail">새로운 팀플을 시작하고 실력을 쌓아보세요!</string>
    <string name="label_complete_teample_empty">완료한 팀플이 없어요.</string>
    <string name="label_complete_teample_empty_detail">팀플을 끝까지 완주하고 실려을 쌓아보세요!</string>

    <!-- My teample detail -->
    <string name="label_see_recruitment_button">모집글 보기</string>
    <string name="label_member">팀원</string>
    <string name="label_member_title">이번 팀플에 이런 성향들이 모였어요!</string>
    <string name="label_detail_info">상세 정보</string>
    <string name="label_project_date">프로젝트 기간&#160;&#160;|&#160;&#160;</string>
    <string name="label_location">활동 지역&#160;&#160;|&#160;&#160;</string>
    <string name="label_recruiter">모집자</string>
    <string name="label_go_write_a_review">완료버튼 누르고 후기쓰러 가요!</string>
    <string name="label_export_member">팀원 내보내기</string>
    <string name="label_complete_teample">팀플 완료</string>
    <string name="label_export_member_dialog">함꼐하는 과정중\n그만 둔 팀원이 있나요?</string>
    <string name="description_export_member_dialog">그만둔 팀원의 완주 수에 표시됩니다.</string>
    <string name="label_export_button">내보내기</string>
    <string name="label_cancel_button">취소하기</string>
    <string name="label_no_export_button">내보내지 않기</string>

    <!-- Member review -->
    <string name="label_skip_button">건너뛰기</string>
    <string name="label_cancel_skip_button">건너뛰기 취소</string>
    <string name="description_horizontal_slide">좌우로 스크롤하여\n다음 또는 이전 팀원으로\n넘어갈 수 있어요!</string>
    <string name="label_skip_review">이 팀원은 후기를 보내지 않을래요 :(</string>
    <string name="description_review_tag">팀원의 강점을 1개 이상 추천해주세요!</string>
    <string name="description_participation">팀원의 참여도는 어땠나요?</string>
    <string name="description_hope_team_again">재팀원 희망도를 선택해주세요 :)</string>
    <string name="label_next_member_button">다음 팀원으로</string>
    <string name="label_submit_review_button">제출하기</string>
</resources>