<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dnd.niceteam.ui.mypage.mywrote.viewmodel.MyWroteViewModel" />

        <variable
            name="adapter"
            type="com.dnd.niceteam.ui.mypage.mywrote.adapter.MyRecruitmentAdapter" />

        <variable
            name="itemDecoration"
            type="com.dnd.niceteam.ui.mypage.mywrote.MyRecruitmentItemDecoration" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="@dimen/padding_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.Teamgoo.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_chip_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_recruitment"
                style="@style/Widget.Teamgoo.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_chip_recruitment" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_complete_recruitment"
                style="@style/Widget.Teamgoo.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_chip_complete_recruitment" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fail_recruitment"
                style="@style/Widget.Teamgoo.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_chip_fail_recruitment" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recruitment"
            adapter="@{adapter}"
            itemDecoration="@{itemDecoration}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_empty"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingHorizontal="@dimen/padding_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group">

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/label_recruitment_wrote_empty"
                android:textAppearance="@style/TextAppearance.Teamgoo.EmptyView.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_empty_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/label_recruitment_wrote_empty_detail"
                android:textAppearance="@style/TextAppearance.Teamgoo.EmptyView.Detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_empty" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_write_recruitment"
                style="@style/Widget.Teamgoo.Button.Gray"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/label_write_recruitment_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
