<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="alarmViewModel"
            type="com.dnd.niceteam.ui.home.alarm.viewmodel.AlarmViewModel" />

        <variable
            name="alarmAdapter"
            type="com.dnd.niceteam.ui.home.alarm.adapter.AlarmAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.alarm.view.AlarmActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Teamgoo.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.dnd.niceteam.ui.common.TeamGooAppBar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_toolbar_64dp"
                app:icon_first_action="@drawable/ic_trash"
                app:icon_navigation="@drawable/ic_back"
                app:title="@string/alarm" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_alarm"
            adapter="@{alarmAdapter}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingTop="4dp"
            android:paddingBottom="100dp"
            app:dividerColor="@{@color/gray_2}"
            app:dividerHeight="@{@dimen/height_alarm_item_divider_1dp}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_appbar" />

        <TextView
            android:id="@+id/tv_select_all"
            showAlarmSelectAll="@{alarmViewModel.deleteMode}"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_toolbar_64dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/label_select_all"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/primary_purple"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_alarm"
            style="@style/Widget.Teamgoo.Button.Purple"
            showAlarmDeleteButton="@{alarmViewModel.deleteList}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_padding_alarm_16dp"
            android:layout_marginBottom="20dp"
            android:stateListAnimator="@null"
            android:text="@string/label_delete_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_alarm_empty"
            showEmptyView="@{alarmViewModel.alarmList}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:paddingHorizontal="@dimen/horizontal_padding_alarm_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_appbar">

            <TextView
                android:id="@+id/tv_alarm_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="142dp"
                android:text="@string/label_alarm_empty"
                android:textAppearance="@style/TextAppearance.Teamgoo.EmptyView.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_alarm_empty_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/label_alarm_empty_detail"
                android:textAppearance="@style/TextAppearance.Teamgoo.EmptyView.Detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_alarm_empty" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>